--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,15 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.schemas=ainoteapi
 spring.jpa.hibernate.ddl-auto=none
 
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
+springdoc.swagger-ui.url=/v3/api-docs
+
+
+server.forward-headers-strategy=framework
+
 
 
 security.jwt.secret=${JWT_SECRET}
